--- a/index.html
+++ b/index.html
@@ -29,3 +29,36 @@
 <p align="right"> <font color="yellow" size="4" face="Arial"> :'( Płacz </font> </p> <br>
 <p align="right"> <font color="pink" size="1" face="Arial"> :/ Sceptycyzm, irytacja, splątanie, niezdecydowanie </font> </p> <br>
 <p align="right"> <font color="purple" size="2" face="Arial"> :P Ignorowanie, frustracja, pokazywanie języka </font> </p> <br>
+<fieldset>
+            <HR size=4 width=100% align=left color=red>
+            <H1 ALIGN=left> ŻART O BLONDYNCE </H1>
+               
+ Idą przez las dwie blondynki i jedna z nich pyta:
+– Widzisz ten las?
+ <br />
+Druga odpowiada:
+ – Nie, drzewa mi zasłaniają. <br />
+            </fieldset>
+<body bgcolor="silver"></body>
+
+<fieldset>
+ <HR size=6 width=80% align=center color=white>
+<H2 ALIGN=center> ŻART O BABIE </H2>
+
+Idą dwie baby do restauracji chińskiej i mówią:
+- Poprosimy coś do jedzenia
+<br />
+Kucharz daje im patyczki a one na to:
+- My tu przyszłyśmy jeść a nie robić na drutach. <br />
+</fieldset>
+
+<fieldset>
+         <HR size=8 width=10% align=right color=blue>
+         <H3 ALIGN=RIGHT> ŻART O PSIE </H3/
+Jasio pyta ciocię:
+– Ciociu, smakował ci ten cukierek?
+– Był pyszny.
+<br />
+– Dziwne! Mój pies go wypluł! <br />
+</fieldset>
+<p align="left"> <font color="black" size="3" face="Arial"> Joachim Patej 2K</font> </p> <br
